--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -211,6 +211,7 @@ $help-text-height: $label-height;
 .form-group__input {
   appearance: none;
   display: block;
+  max-width: 100%;
   padding: 0 $half-padding;
   line-height: $input-height;
   font: $p;
